# axum-postgres-template

./: .dockerignore  .env  .env.example  .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  db.sh  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: rust.yml
migrations/: 20230706134731_create_example_table.sql
public/: styles.css  tailwind.css
src/: api_error.rs  cfg.rs  configuration.rs  db.rs  errors.rs  lib.rs  main.rs  metadata.rs  middleware.rs  render.rs  telemetry.rs
src/components/: layout.rs  mod.rs  search_form.rs
src/components/ui/: button.rs
src/routes/: example.rs  health_check.rs  home.rs  mod.rs
src/ui/: alert.rs  badge.rs  button.rs  card.rs  checkbox.rs  icons.rs  input.rs  label.rs  mod.rs  pagination.rs  radio.rs  select.rs  skeleton.rs  table.rs  textarea.rs  typography.rs
tests/api/: example.rs  health_check.rs  helpers.rs  main.rs
tests/api/snapshots/: api__example__example_post_ok.snap.new  api__health_check__health_check_ok.snap
