[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.7.5"
hyper = "1.3.1"
tower = { version = "0.4.13", features = []}
tower-http = { version = "0.5.1", features = ["trace", "timeout", "request-id", "cors", "normalize-path"] }

sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "chrono", "json", "uuid"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }

reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v7", "serde"] }

dotenvy = "0.15.7"
anyhow = "1.0.86"
thiserror = "1.0.61"
