[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
axum = "0.7.6"
hyper = "1.4.1"
tower = { version = "0.5.0", features = [] }
tower-http = { version = "0.6.1", features = [
    "trace",
    "timeout",
    "request-id",
    "cors",
    "normalize-path",
] }

sqlx = { version = "0.8.0", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "chrono",
    "json",
    "uuid",
] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }

reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.8.0", features = ["v7", "serde"] }
dotenvy = "0.15.7"

anyhow = "1.0.89"
thiserror = "1.0.64"
